added project images

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <header>
   <div class="profile-picture">
-    <img src="/Users/sarahdean/Pictures/IMG_4839.jpeg" alt="Sarah Dean">
+    <img src="images/cover.png" alt="Sarah Dean">
   </div>
   <h1>Sarah Dean</h1>
   <h2>Software Engineer</h2>
@@ -22,9 +22,9 @@
 <div class="projects-container">
   <!-- Project 1: MamaMatch -->
   <div class="project">
-    <img src="/Users/sarahdean/Desktop/Screenshot 2023-07-20 at 9.20.34 PM.png" alt="FutHut Thumbnail" class="project-thumbnail">
-    <h3>FutHut</h3>
-    <p>Web app for FIFA Ultimate Team players, simplifying squad building. Implemented user authentication, integrated real-time player data API, and utilized React hooks for better performance.</p>
+    <img src="images/mamamatch.png" alt="MamaMatch" class="project-thumbnail">
+    <h3>MamaMatch</h3>
+    <p>Social media application catering to mothers, facilitating connections and fostering meaningful connections.</p>
     <!-- <div class="project-links">
       <a href="https://youtu.be/8lFFqhk2quM" target="_blank"><i class="fas fa-external-link-alt"></i> View Demo</a>
       <a href="https://github.com/ejeong24/Capstone" target="_blank"><i class="fab fa-github"></i> View Code</a>
@@ -34,41 +34,41 @@
   <!-- Project 2: HappyTrails -->
   <div class="project">
     <img src="images/Screenshot_GunplaPAL.PNG" alt="GunplaPAL Thumbnail" class="project-thumbnail">
-    <h3>Gunpla-Pal</h3>
-    <p>A comprehensive web app for Gundam model enthusiasts (Gunpla) to manage their collections, discover new models, and connect with fellow hobbyists. Key features include account customization, gunpla collection management, and interactive gunpla database.</p>
+    <h3>HappyTrails</h3>
+    <p>Web app for hiking enthusiasts. Search and view detailed information about different trails. Create a user profile to add a review</p>
     <!-- <div class="project-links">
       <a href="https://youtu.be/rdT4HqP6Do8" target="_blank"><i class="fas fa-external-link-alt"></i> View Demo</a>
       <a href="https://github.com/Evan-Roberts-808/Gunpla-Pal" target="_blank"><i class="fab fa-github"></i> View Code</a>
     </div> -->
   </div>
 
-  <!-- Project 3: Pawtify -->
+  <!-- Project 3: Bark n Brush -->
   <div class="project">
-    <img src="images/Pawtify_Home.png" alt="Pawtify Thumbnail" class="project-thumbnail">
-    <h3>Pawtify</h3>
-    <p>Music app enabling music discovery, user profiles, and artist interactions. Implemented React Router and various components for a seamless experience.</p>
+    <img src="images/barknbrush.png" alt="Barknbrush" class="project-thumbnail">
+    <h3>Bark 'n' Brush</h3>
+    <p>Dog grooming appointment manager. </p>
     <!-- <div class="project-links">
       <a href="https://youtu.be/9oGovJ0qDIw" target="_blank"><i class="fas fa-external-link-alt"></i> View Demo</a>
       <a href="https://github.com/labordude/pawtify" target="_blank"><i class="fab fa-github"></i> View Code</a>
     </div> -->
   </div>
 
-  <!-- Project 4: Sandridge -->
+  <!-- Project 4: PassportPal -->
   <div class="project">
-    <img src="images/Sandridge_ASCII.PNG" alt="Sandridge Thumbnail" class="project-thumbnail">
-    <h3>Sandridge</h3>
-    <p>Virtual game app for exploring Sandridge town, with a CLI for interaction and SQLAlchemy integration.</p>
+    <img src="images/passport.png" alt="Sandridge Thumbnail" class="project-thumbnail">
+    <h3>PassportPal</h3>
+    <p>Virtual passport application. </p>
     <!-- <div class="project-links">
       <a href="https://youtu.be/OU4D44jjreU" target="_blank"><i class="fas fa-external-link-alt"></i> View Demo</a>
       <a href="https://github.com/Evan-Roberts-808/Sandridge" target="_blank"><i class="fab fa-github"></i> View Code</a>
     </div> -->
   </div>
 
-  <!-- Project 5: Masterpieces of the Month -->
+  <!-- Project 5: OnlyPrince -->
   <div class="project">
     <img src="images/Screenshot_MotM.PNG" alt="MotM Thumbnail" class="project-thumbnail">
-    <h3>Masterpieces of the Month</h3>
-    <p>Web app for exploring artworks from renowned museums. Features include artwork search, favorites, and API integration.</p>
+    <h3>OnlyPrince</h3>
+    <p></p>
     <!-- <div class="project-links">
       <a href="https://youtu.be/Q4yHcCHlEBg" target="_blank"><i class="fas fa-external-link-alt"></i> View Demo</a>
       <a href="https://github.com/lisgarcia/masterpieces-of-the-month" target="_blank"><i class="fab fa-github"></i> View Code</a>
