--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <header>
   <div class="profile-picture">
-    <img src="images/cover.png" alt="Sarah Dean">
+    <img src="images/IMG_4839.jpg" alt="Sarah Dean">
   </div>
   <h1>Sarah Dean</h1>
   <h2>Software Engineer</h2>
@@ -33,7 +33,7 @@
 
   <!-- Project 2: HappyTrails -->
   <div class="project">
-    <img src="images/Screenshot_GunplaPAL.PNG" alt="GunplaPAL Thumbnail" class="project-thumbnail">
+    <img src="images/Screenshot_GunplaPAL.PNG" alt="happytrails image" class="project-thumbnail">
     <h3>HappyTrails</h3>
     <p>Web app for hiking enthusiasts. Search and view detailed information about different trails. Create a user profile to add a review</p>
     <!-- <div class="project-links">
@@ -55,7 +55,7 @@
 
   <!-- Project 4: PassportPal -->
   <div class="project">
-    <img src="images/passport.png" alt="Sandridge Thumbnail" class="project-thumbnail">
+    <img src="images/passport.png" alt="Passportpal" class="project-thumbnail">
     <h3>PassportPal</h3>
     <p>Virtual passport application. </p>
     <!-- <div class="project-links">
@@ -66,7 +66,7 @@
 
   <!-- Project 5: OnlyPrince -->
   <div class="project">
-    <img src="images/Screenshot_MotM.PNG" alt="MotM Thumbnail" class="project-thumbnail">
+    <img src="images/Screenshot_MotM.PNG" alt="OnlyPrince" class="project-thumbnail">
     <h3>OnlyPrince</h3>
     <p></p>
     <!-- <div class="project-links">
