updates to bio, formatting

--- a/index.html
+++ b/index.html
@@ -15,31 +15,32 @@
   </div>
   <h1>Sarah Dean</h1>
   <h2>Software Engineer</h2>
-  <p>San Antonio, TX | <a href="tel:5058188515">505-818-8515</a> | <a href="mailto:sarah.schmidtdean@gmail.com">sarah.schmidtdean@gmail.com</a> | <a href="https://github.com/sarahadean" target="_blank">GitHub</a> | <a href="http://medium.com/@sarah.schmidtdean" target="_blank">Blog</a> | <a href="http://linkedin.com/in/sarah-a-dean/" target="_blank">LinkedIn</a></p>
-  <p>Software engineer with a strong foundation building fullstack application using Python, Flask, JavaScript and React. </p>
+  <p> <a href="mailto:sarah.schmidtdean@gmail.com">Contact Me</a> | <a href="https://github.com/sarahadean" target="_blank">GitHub</a> | <a href="http://medium.com/@sarah.schmidtdean" target="_blank">Blog</a> | <a href="http://linkedin.com/in/sarah-a-dean/" target="_blank">LinkedIn</a></p>
+  <p class="bio">Dedicated and motivated software engineer with a unique background in Biology. I have a strong foundation building fullstack application using Python, Flask, JavaScript and React. I thrive in collaborative environments and I am eager to contribute my technical expertise to make a positive impact on any team.</p>
 </header>
   
+<!-- hover over - cycles through imgs -->
 <div class="projects-container">
   <!-- Project 1: MamaMatch -->
   <div class="project">
     <img src="images/mamamatch.png" alt="MamaMatch" class="project-thumbnail">
     <h3>MamaMatch</h3>
     <p>Social media application catering to mothers, facilitating connections and fostering meaningful connections.</p>
-    <!-- <div class="project-links">
-      <a href="https://youtu.be/8lFFqhk2quM" target="_blank"><i class="fas fa-external-link-alt"></i> View Demo</a>
-      <a href="https://github.com/ejeong24/Capstone" target="_blank"><i class="fab fa-github"></i> View Code</a>
-    </div> -->
+    <div class="project-links">
+      <!-- <a href="https://youtu.be/8lFFqhk2quM" target="_blank"><i class="fas fa-external-link-alt"></i> View Demo</a> -->
+      <a href="https://github.com/sarahadean/capstone" target="_blank"><i class="fab fa-github"></i> View Code</a>
+    </div>
   </div>
 
   <!-- Project 2: HappyTrails -->
   <div class="project">
-    <img src="images/Screenshot_GunplaPAL.PNG" alt="happytrails image" class="project-thumbnail">
+    <img src="images/Screenshot_GunplaPAL.PNG" alt="happytrails_image" class="project-thumbnail">
     <h3>HappyTrails</h3>
     <p>Web app for hiking enthusiasts. Search and view detailed information about different trails. Create a user profile to add a review</p>
-    <!-- <div class="project-links">
-      <a href="https://youtu.be/rdT4HqP6Do8" target="_blank"><i class="fas fa-external-link-alt"></i> View Demo</a>
-      <a href="https://github.com/Evan-Roberts-808/Gunpla-Pal" target="_blank"><i class="fab fa-github"></i> View Code</a>
-    </div> -->
+    <div class="project-links">
+      <!-- <a href="https://youtu.be/rdT4HqP6Do8" target="_blank"><i class="fas fa-external-link-alt"></i> View Demo</a> -->
+      <a href="https://github.com/vcali02/Happy_Trails" target="_blank"><i class="fab fa-github"></i> View Code</a>
+    </div>
   </div>
 
   <!-- Project 3: Bark n Brush -->
@@ -47,10 +48,10 @@
     <img src="images/barknbrush.png" alt="Barknbrush" class="project-thumbnail">
     <h3>Bark 'n' Brush</h3>
     <p>Dog grooming appointment manager. </p>
-    <!-- <div class="project-links">
-      <a href="https://youtu.be/9oGovJ0qDIw" target="_blank"><i class="fas fa-external-link-alt"></i> View Demo</a>
-      <a href="https://github.com/labordude/pawtify" target="_blank"><i class="fab fa-github"></i> View Code</a>
-    </div> -->
+    <div class="project-links">
+      <!-- <a href="https://youtu.be/9oGovJ0qDIw" target="_blank"><i class="fas fa-external-link-alt"></i> View Demo</a> -->
+      <a href="https://github.com/sarahadean/bark_n_brush_project" target="_blank"><i class="fab fa-github"></i> View Code</a>
+    </div>
   </div>
 
   <!-- Project 4: PassportPal -->
@@ -58,10 +59,10 @@
     <img src="images/passport.png" alt="Passportpal" class="project-thumbnail">
     <h3>PassportPal</h3>
     <p>Virtual passport application. </p>
-    <!-- <div class="project-links">
-      <a href="https://youtu.be/OU4D44jjreU" target="_blank"><i class="fas fa-external-link-alt"></i> View Demo</a>
-      <a href="https://github.com/Evan-Roberts-808/Sandridge" target="_blank"><i class="fab fa-github"></i> View Code</a>
-    </div> -->
+    <div class="project-links">
+      <!-- <a href="https://youtu.be/OU4D44jjreU" target="_blank"><i class="fas fa-external-link-alt"></i> View Demo</a> -->
+      <a href="https://github.com/sarahadean/PassportPal" target="_blank"><i class="fab fa-github"></i> View Code</a>
+    </div>
   </div>
 
   <!-- Project 5: OnlyPrince -->
@@ -69,10 +70,10 @@
     <img src="images/Screenshot_MotM.PNG" alt="OnlyPrince" class="project-thumbnail">
     <h3>OnlyPrince</h3>
     <p></p>
-    <!-- <div class="project-links">
-      <a href="https://youtu.be/Q4yHcCHlEBg" target="_blank"><i class="fas fa-external-link-alt"></i> View Demo</a>
-      <a href="https://github.com/lisgarcia/masterpieces-of-the-month" target="_blank"><i class="fab fa-github"></i> View Code</a>
-    </div> -->
+    <div class="project-links">
+      <!-- <a href="https://youtu.be/Q4yHcCHlEBg" target="_blank"><i class="fas fa-external-link-alt"></i> View Demo</a> -->
+      <a href="https://github.com/sarahadean/Prince_Albums_Project" target="_blank"><i class="fab fa-github"></i> View Code</a>
+    </div>
   </div>
 </div>
 
@@ -110,13 +111,13 @@
     <h2>Education</h2>
     
     <div class="education">
-      <h3>Flatiron School, New York City, NY</h3>
-      <p><strong>Full Stack Web Development, Python with Flask and JavaScript program</strong> (04/2023 - 07/2023)</p>
+      <h3>Flatiron School | New York City, NY</h3>
+      <p>Full Stack Web Development, Python with Flask and JavaScript program (04/2023 - 07/2023)</p>
     </div>
 
     <div class="education">
-      <h3>University of Texas at San Antonio, San Antonio, TX</h3>
-      <p><strong>BS, Biology</strong> </p>
+      <h3>University of Texas at San Antonio | San Antonio, TX</h3>
+      <p>BS, Biology</p>
     </div>
     
   </div>
