--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <h1>Sarah Dean</h1>
   <h2>Software Engineer</h2>
   <p> <a href="mailto:sarah.schmidtdean@gmail.com">Contact Me</a> | <a href="https://github.com/sarahadean" target="_blank">GitHub</a> | <a href="http://medium.com/@sarah.schmidtdean" target="_blank">Blog</a> | <a href="http://linkedin.com/in/sarah-a-dean/" target="_blank">LinkedIn</a></p>
-  <p class="bio">Dedicated and motivated software engineer with a unique background in Biology. I have a strong foundation building fullstack application using Python, Flask, JavaScript and React. I thrive in collaborative environments and I am eager to contribute my technical expertise to make a positive impact on any team.</p>
+  <p class="bio">Dedicated and motivated software engineer with a unique background in Biology. I have a strong foundation building Full-Stack applications using Python, Flask, JavaScript and React. I thrive in collaborative environments and I am eager to contribute my technical expertise to make a positive impact on any team.</p>
 </header>
   
 <!-- hover over - cycles through imgs -->
