updates to project descriptions

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
   <h1>Sarah Dean</h1>
   <h2>Software Engineer</h2>
-  <p> <a href="mailto:sarah.schmidtdean@gmail.com">Contact Me</a> | <a href="https://github.com/sarahadean" target="_blank">GitHub</a> | <a href="http://medium.com/@sarah.schmidtdean" target="_blank">Blog</a> | <a href="http://linkedin.com/in/sarah-a-dean/" target="_blank">LinkedIn</a></p>
+  <p> <a href="mailto:sarah.schmidtdean@gmail.com"> Contact Me </a> | <a href="https://github.com/sarahadean" target="_blank">GitHub</a> | <a href="http://medium.com/@sarah.schmidtdean" target="_blank">Blog</a> | <a href="http://linkedin.com/in/sarah-a-dean/" target="_blank">LinkedIn</a></p>
   <p class="bio">Dedicated and motivated software engineer with a unique background in Biology. I have a strong foundation building Full-Stack applications using Python, Flask, JavaScript and React. I thrive in collaborative environments and I am eager to contribute my technical expertise to make a positive impact on any team.</p>
 </header>
   
@@ -23,9 +23,10 @@
 <div class="projects-container">
   <!-- Project 1: MamaMatch -->
   <div class="project">
-    <img src="images/mamamatch.png" alt="MamaMatch" class="project-thumbnail">
+    <img src="images/MamaMatchHome.png" alt="MamaMatch" class="project-thumbnail">
     <h3>MamaMatch</h3>
-    <p>Social media application catering to mothers, facilitating connections and fostering meaningful connections.</p>
+    <p>Social media application catering to mothers, facilitating connections and fostering meaningful connections. Implemented self-referential many-to-many relationship powers friend feature. Includes dynamic message/chat functionality, allowing users to engage in real-time conversations. </p>
+    <p><strong>Tech Stack:</strong>Javascript, React, React Router, Python, Flask-SQLAlchemy, Flask RESTful, Flask, MaterialUI</p>
     <div class="project-links">
       <!-- <a href="https://youtu.be/8lFFqhk2quM" target="_blank"><i class="fas fa-external-link-alt"></i> View Demo</a> -->
       <a href="https://github.com/sarahadean/capstone" target="_blank"><i class="fab fa-github"></i> View Code</a>
@@ -34,9 +35,10 @@
 
   <!-- Project 2: HappyTrails -->
   <div class="project">
-    <img src="images/Screenshot_GunplaPAL.PNG" alt="happytrails_image" class="project-thumbnail">
+    <img src="images/HappyTrails.png" alt="happytrails_image" class="project-thumbnail">
     <h3>HappyTrails</h3>
-    <p>Web app for hiking enthusiasts. Search and view detailed information about different trails. Create a user profile to add a review</p>
+    <p>Web app for hiking enthusiasts. User interfaces allows access to view detailed information about specific hikes and explore reviews from fellow hikers. User login and authentication enables users to create personalized profiles, login securely and unlock exclusive features like trail marking and review submissions. </p>
+    <p><strong>Tech Stack:</strong>Javascript, React, React Router, Python, Flask-SQLAlchemy, Flask RESTful, Flask, MaterialUI</p>
     <div class="project-links">
       <!-- <a href="https://youtu.be/rdT4HqP6Do8" target="_blank"><i class="fas fa-external-link-alt"></i> View Demo</a> -->
       <a href="https://github.com/vcali02/Happy_Trails" target="_blank"><i class="fab fa-github"></i> View Code</a>
@@ -47,7 +49,8 @@
   <div class="project">
     <img src="images/barknbrush.png" alt="Barknbrush" class="project-thumbnail">
     <h3>Bark 'n' Brush</h3>
-    <p>Dog grooming appointment manager. </p>
+    <p>Interactive Command-Line Interface (CLI) dog grooming appointment manager utilizing PyInquirer. Streamlines the process of scheduling, updating and canceling dog grooming appointments for clients for efficient appointment management.   </p>
+    <p><strong>Tech Stack:</strong>Python, ORM, SQLAlchemy, PyInquirer, Alembic, SQLite</p>
     <div class="project-links">
       <!-- <a href="https://youtu.be/9oGovJ0qDIw" target="_blank"><i class="fas fa-external-link-alt"></i> View Demo</a> -->
       <a href="https://github.com/sarahadean/bark_n_brush_project" target="_blank"><i class="fab fa-github"></i> View Code</a>
@@ -56,9 +59,11 @@
 
   <!-- Project 4: PassportPal -->
   <div class="project">
-    <img src="images/passport.png" alt="Passportpal" class="project-thumbnail">
+    <img src="images/passportpal.png" alt="Passportpal" class="project-thumbnail">
     <h3>PassportPal</h3>
-    <p>Virtual passport application. </p>
+    <p>Virtual passport application. User interface allows user to view every country and corresponding flag and virtually "stamp" their passport. User can view passport stamps and add customized description and photo.</p>
+    <p><strong>Tech:</strong>JavaScript, HTML5, CSS, Bootstrap, React</p>
+    
     <div class="project-links">
       <!-- <a href="https://youtu.be/OU4D44jjreU" target="_blank"><i class="fas fa-external-link-alt"></i> View Demo</a> -->
       <a href="https://github.com/sarahadean/PassportPal" target="_blank"><i class="fab fa-github"></i> View Code</a>
@@ -67,9 +72,10 @@
 
   <!-- Project 5: OnlyPrince -->
   <div class="project">
-    <img src="images/Screenshot_MotM.PNG" alt="OnlyPrince" class="project-thumbnail">
+    <img src="images/onlyprince.png" alt="OnlyPrince" class="project-thumbnail">
     <h3>OnlyPrince</h3>
-    <p></p>
+    <p>Application featuring a portion of Prince's body of work. User can view the cover and back album art for each album. User interface allows creation of custom Prince playlist and rating for each individual song. </p>
+    <p><strong>Tech:</strong>JavaScript, HTML5, CSS</p>
     <div class="project-links">
       <!-- <a href="https://youtu.be/Q4yHcCHlEBg" target="_blank"><i class="fas fa-external-link-alt"></i> View Demo</a> -->
       <a href="https://github.com/sarahadean/Prince_Albums_Project" target="_blank"><i class="fab fa-github"></i> View Code</a>
@@ -81,8 +87,8 @@
   <div class="container">
     <h2>Technical Skills</h2>
     <ul>
-      <li>Frontend: HTML, CSS, React, React-Router</li>
-      <li>Backend: Python, Flask, SQLAlchemy, SQLite, REST APIs</li>
+      <li>Frontend: HTML5, CSS, React, React-Router, MaterialUI, Bootstrap</li>
+      <li>Backend: Python, Flask, SQLAlchemy, SQLite, REST APIs, Object-Oriented Programming</li>
     </ul>
   </div>
 </section>
